--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,13 +24,8 @@
     <string name="change_floor_dialog_message">Your target is in floor: %1$d (Current floor is %2$d).\nPlease get there and scan a new QR Code.</string>
     <string name="faculty_prompt">Choose a faculty</string>
     <string-array name="faculty_array">
-        <item>Malaysia</item>
-        <item>United States</item>
-        <item>Indonesia</item>
-        <item>France</item>
-        <item>Italy</item>
-        <item>Singapore</item>
-        <item>New Zealand</item>
-        <item>India</item>
+        <item>Ingegneria</item>
+        <item>Agraria</item>
+        <item>Architettura</item>
     </string-array>
 </resources>
