--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,9 @@
 <resources>
     <string name="app_name">Medinav</string>
-    <string name ="choose_faculty_button">Choose</string>
+    <string name ="choose_destination">Choose a destination from the list below</string>
     <string name="choose_faculty">Please choose a faculty from the list below</string>
     <string name="permission_error_title">Permission Required</string>
     <string name="permission_error">To work correctly this app requires permission to use camera.</string>
-    <string name="choose_destination">Please choose faculty and destination</string>
     <string name="qr_scan">Scan QR Code for next location</string>
     <string name="button_send">Send</string>
     <string name="button_navigate">Explore</string>
