--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">MediNav</string>
+    <string name="about">About</string>
     <string name="choose_destination">Choose a destination from the list below</string>
     <string name="choose_faculty">Please choose a faculty from the list below</string>
     <string name="permission_error_title">Permission Required</string>
